user_game_dataにレコード追加処理

--- a/view/templates/mypage/mypage.htm
+++ b/view/templates/mypage/mypage.htm
@@ -20,6 +20,6 @@
     </style>
 </head>
 <body>
-    <p class="gachabtn"><a href="?mode=gacha&action=top">ガチャ</a></p>
+    <p class="gachabtn"><a href="?mode=gacha&action=gacha">ガチャ</a></p>
 </body>
 </html>
