--- a/view/templates/top/top.htm
+++ b/view/templates/top/top.htm
@@ -1,5 +1,8 @@
 <html>
-<title>Topページ</title>
+<head>
+    <title>TOP</title>
+    <link rel='stylesheet' href="view/css/top.css">
+</head>
 <body>
 	<h1>ゲームタイトル</h1>
 
@@ -11,6 +14,8 @@
 		<input type="submit" value="login">
 	</form>
 
-	<a href = '?mode=top&action=newEntry'>新規登録</a>
+    <left>
+	   <div class='newentybtn'><a href = '?mode=top&action=newEntry'>新規登録</a></div>
+    </left>
 </body>
 </html>
